--- a/fr_file_index.html
+++ b/fr_file_index.html
@@ -10,7 +10,7 @@
     <div id='index'>
       <h1>File Index</h1>
       <ol class='files' id='index-entries'>
-        <li><a target="docwin" href="files/README.html">README</a></li>
+        <li><a target="docwin" href="files/README_rdoc.html">README.rdoc</a></li>
         <li class='other'><a target="docwin" href="files/lib/gash_rb.html">gash.rb</a></li>
         <li>
           <a class='show' href='#' onclick='this.parentNode.parentNode.className += " expanded"; this.parentNode.removeChild(this); return false'>show all</a>
